--- a/index.html
+++ b/index.html
@@ -22,3 +22,5 @@
 <h3><a href="https://github.com/AttilaFerenczi/Algoritmusok/tree/32ca31d6a5c40a9b3019b49f0709b9c36c1cb7c3/Dinamikus">3. feladat - Dinamikus programozás</a></h3>
 
 <h3><a href="https://github.com/AttilaFerenczi/Algoritmusok/tree/32ca31d6a5c40a9b3019b49f0709b9c36c1cb7c3/Graf">4. feladat - Gráf</a></h3>
+
+<h3><a href="https://github.com/AttilaFerenczi/Algoritmusok/tree/6a8df0a77f30fe3e15e9cb59d4289b2d9979a368/Kollikvium">Kollikvium feladat</a></h3>
